Improved Blood Infused Spellbook functionality
Adds max mana bonus to Blood Infused Spellbook based on tier.
Fixes client-server desync during altar infusion process.
Updates tooltip information to provide clearer details.

The max mana bonus is applied as an attribute modifier when the
spellbook is equipped in a curios slot and removed when unequipped.

Also corrects slot calculations and tier upgrade requirements.